added anis summer

--- a/index.html
+++ b/index.html
@@ -610,6 +610,10 @@
         <img src="E:/Coding/nikkesportrait/image/tetra_ssr_b3_sg_atk_neve.webp" alt="tetra_ssr_b3_sg_atk_neve.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="sg" data-name="anissummer">
+        <img src="E:/Coding/nikkesportrait/image/tetra_ssr_B3_sp_sg_anissummer.webp" alt="tetra_ssr_B3_sp_sg_anissummer.webp" onclick="toggleImageSelection(this)">
+    </div>
+
 </div>
 
 <div id="selectedContainer" class="gallery"></div>
