--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
 
 <div class="gallery">
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl">
+        <img src="image/abnormal_r_a_sp_ar_z2rl.webp" alt="abnormal_r_a_sp_ar_z2rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3rl">
+        <img src="image/abnormal_r_a_sp_ar_z3rl.webp" alt="abnormal_r_a_sp_ar_z3rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl">
+        <img src="image/abnormal_r_a_sp_ar_z4rl.webp" alt="abnormal_r_a_sp_ar_z4rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="zbastion">
         <img src="image/abnormal_r_a_sp_ar_zbastion.webp" alt="abnormal_r_a_sp_ar_zbastion.webp" onclick="toggleImageSelection(this)">
     </div>
@@ -603,12 +615,20 @@
         <img src="image/tetra_ssr_B3_atk_sg_noir.webp" alt="tetra_ssr_B3_atk_sg_noir.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b3" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="sg" data-name="sodatb">
+        <img src="image/tetra_ssr_B3_atk_sg_sodatb.webp" alt="tetra_ssr_B3_atk_sg_sodatb.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="b3" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="snr" data-name="alice">
         <img src="image/tetra_ssr_B3_atk_snr_alice.webp" alt="tetra_ssr_B3_atk_snr_alice.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="b3" data-position="sg" data-faction="tetra" data-rarity="ssr" data-weapon="atk" data-name="neve">
         <img src="image/tetra_ssr_b3_sg_atk_neve.webp" alt="tetra_ssr_b3_sg_atk_neve.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="ar" data-name="sakurasummer">
+        <img src="image/tetra_ssr_b3_sp_ar_sakurasummer.webp" alt="tetra_ssr_b3_sp_ar_sakurasummer.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="sg" data-name="anissummer">
