added win and more rl

--- a/index.html
+++ b/index.html
@@ -91,16 +91,32 @@
 
 <div class="gallery">
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="win">
+        <img src="image/abnormal_r_a_sp_ar_win.webp" alt="abnormal_r_a_sp_ar_win.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl">
         <img src="image/abnormal_r_a_sp_ar_z2rl.webp" alt="abnormal_r_a_sp_ar_z2rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl2">
+        <img src="image/abnormal_r_a_sp_ar_z2rl2.webp" alt="abnormal_r_a_sp_ar_z2rl2.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3rl">
         <img src="image/abnormal_r_a_sp_ar_z3rl.webp" alt="abnormal_r_a_sp_ar_z3rl.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3rl2">
+        <img src="image/abnormal_r_a_sp_ar_z3rl2.webp" alt="abnormal_r_a_sp_ar_z3rl2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl">
         <img src="image/abnormal_r_a_sp_ar_z4rl.webp" alt="abnormal_r_a_sp_ar_z4rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl2">
+        <img src="image/abnormal_r_a_sp_ar_z4rl2.webp" alt="abnormal_r_a_sp_ar_z4rl2.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="zbastion">
