add emilia and jackal2

--- a/index.html
+++ b/index.html
@@ -607,6 +607,10 @@
         <img src="image/tetra_ssr_b2_sp_rl_biscuit.webp" alt="tetra_ssr_b2_sp_rl_biscuit.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b2" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="rl" data-name="biscuit2">
+        <img src="image/tetra_ssr_b2_sp_rl_biscuit2.webp" alt="tetra_ssr_b2_sp_rl_biscuit2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="b2" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="sg" data-name="leona">
         <img src="image/tetra_ssr_b2_sp_sg_leona.webp" alt="tetra_ssr_b2_sp_sg_leona.webp" onclick="toggleImageSelection(this)">
     </div>
