--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
         <img src="image/abnormal_ssr_b3_atk_rl_emilia.webp" alt="abnormal_ssr_b3_atk_rl_emilia.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b3" data-position="atk" data-faction="abnormal" data-rarity="ssr" data-weapon="rl" data-name="emilia2">
+        <img src="image/abnormal_ssr_b3_atk_rl_emilia2.webp" alt="abnormal_ssr_b3_atk_rl_emilia2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="b3" data-position="atk" data-faction="abnormal" data-rarity="ssr" data-weapon="rl" data-name="power">
         <img src="image/abnormal_ssr_b3_atk_rl_power.webp" alt="abnormal_ssr_b3_atk_rl_power.webp" onclick="toggleImageSelection(this)">
     </div>
@@ -329,6 +333,10 @@
 
     <div class="photo" data-type="b1" data-position="def" data-faction="missilis" data-rarity="ssr" data-weapon="rl" data-name="jackal">
         <img src="image/missilis_ssr_b1_def_rl_jackal.webp" alt="missilis_ssr_b1_def_rl_jackal.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="b1" data-position="def" data-faction="missilis" data-rarity="ssr" data-weapon="rl" data-name="jackal2">
+        <img src="image/missilis_ssr_b1_def_rl_jackal2.webp" alt="missilis_ssr_b1_def_rl_jackal2.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="b1" data-position="def" data-faction="missilis" data-rarity="ssr" data-weapon="rl" data-name="tia">
