--- a/index.html
+++ b/index.html
@@ -647,6 +647,10 @@
         <img src="image/tetra_ssr_B3_atk_sg_sodatb.webp" alt="tetra_ssr_B3_atk_sg_sodatb.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b3" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="sg" data-name="sugar">
+        <img src="image/tetra_ssr_B3_atk_sg_sugar.webp" alt="tetra_ssr_B3_atk_sg_sugar.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="b3" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="snr" data-name="alice">
         <img src="image/tetra_ssr_B3_atk_snr_alice.webp" alt="tetra_ssr_B3_atk_snr_alice.webp" onclick="toggleImageSelection(this)">
     </div>
