--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
         <img src="image/elysion_r_b3_sp_ar_soldereg.webp" alt="elysion_r_b3_sp_ar_soldereg.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="b1" data-position="sp" data-faction="elysion" data-rarity="sr" data-weapon="sg" data-name="neon">
+        <img src="image/elysion_sr_b1_sp_sg_neon.webp" alt="elysion_sr_b1_sp_sg_neon.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="b2" data-position="def" data-faction="elysion" data-rarity="sr" data-weapon="sr" data-name="Delta">
         <img src="image/elysion_sr_B2_def_sr_Delta.webp" alt="elysion_sr_B2_def_sr_Delta.webp" onclick="toggleImageSelection(this)">
     </div>
