added more rl speed

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         <img src="image/abnormal_r_a_sp_ar_z2.5rl.webp" alt="abnormal_r_a_sp_ar_z2.5rl.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2.5rl2">
+        <img src="image/abnormal_r_a_sp_ar_z2.5rl2.webp" alt="abnormal_r_a_sp_ar_z2.5rl2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl">
         <img src="image/abnormal_r_a_sp_ar_z2rl.webp" alt="abnormal_r_a_sp_ar_z2rl.webp" onclick="toggleImageSelection(this)">
     </div>
@@ -109,6 +113,10 @@
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3.5rl">
         <img src="image/abnormal_r_a_sp_ar_z3.5rl.webp" alt="abnormal_r_a_sp_ar_z3.5rl.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3.5rl2">
+        <img src="image/abnormal_r_a_sp_ar_z3.5rl2.webp" alt="abnormal_r_a_sp_ar_z3.5rl2.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3rl">
