--- a/index.html
+++ b/index.html
@@ -103,12 +103,20 @@
         <img src="image/abnormal_r_a_sp_ar_z2.5rl2.webp" alt="abnormal_r_a_sp_ar_z2.5rl2.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2.5rl3">
+        <img src="image/abnormal_r_a_sp_ar_z2.5rl3.webp" alt="abnormal_r_a_sp_ar_z2.5rl3.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl">
         <img src="image/abnormal_r_a_sp_ar_z2rl.webp" alt="abnormal_r_a_sp_ar_z2rl.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl2">
         <img src="image/abnormal_r_a_sp_ar_z2rl2.webp" alt="abnormal_r_a_sp_ar_z2rl2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z2rl3">
+        <img src="image/abnormal_r_a_sp_ar_z2rl3.webp" alt="abnormal_r_a_sp_ar_z2rl3.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3.5rl">
@@ -127,12 +135,20 @@
         <img src="image/abnormal_r_a_sp_ar_z3rl2.webp" alt="abnormal_r_a_sp_ar_z3rl2.webp" onclick="toggleImageSelection(this)">
     </div>
 
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z3rl3">
+        <img src="image/abnormal_r_a_sp_ar_z3rl3.webp" alt="abnormal_r_a_sp_ar_z3rl3.webp" onclick="toggleImageSelection(this)">
+    </div>
+
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl">
         <img src="image/abnormal_r_a_sp_ar_z4rl.webp" alt="abnormal_r_a_sp_ar_z4rl.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl2">
         <img src="image/abnormal_r_a_sp_ar_z4rl2.webp" alt="abnormal_r_a_sp_ar_z4rl2.webp" onclick="toggleImageSelection(this)">
+    </div>
+
+    <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="z4rl3">
+        <img src="image/abnormal_r_a_sp_ar_z4rl3.webp" alt="abnormal_r_a_sp_ar_z4rl3.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="a" data-position="sp" data-faction="abnormal" data-rarity="r" data-weapon="ar" data-name="zbastion">
