--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         <img src="image/elysion_ssr_b1_sp_smg_miranda.webp" alt="elysion_ssr_b1_sp_smg_miranda.webp" onclick="toggleImageSelection(this)">
     </div>
 
-    <div class="photo" data-type="b1" data-position="sp" data-faction="elysion" data-rarity="ssr" data-weapon="snr" data-name="dwife">
-        <img src="image/elysion_ssr_b1_sp_snr_dwife.webp" alt="elysion_ssr_b1_sp_snr_dwife.webp" onclick="toggleImageSelection(this)">
+    <div class="photo" data-type="b1" data-position="sp" data-faction="elysion" data-rarity="ssr" data-weapon="snr" data-name="dkillerwife">
+        <img src="image/elysion_ssr_b1_sp_snr_dkillerwife.webp" alt="elysion_ssr_b1_sp_snr_dkillerwife.webp" onclick="toggleImageSelection(this)">
     </div>
 
     <div class="photo" data-type="b2" data-position="atk" data-faction="elysion" data-rarity="ssr" data-weapon="ar" data-name="helmsummer">
