--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <label><input type="checkbox" value="mg" onchange="updateFilters()"> MG</label>
         </div>
     <div>
-    <button id="showHideButton" onclick="toggleShowHide()">Show All</button>
+    <button id="showHideButton" onclick="toggleShowHide()">Show/Hide All</button>
 </div>
     
 <div class="sort-controls">
