--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <img src="image/120_elysion_ssr_b2_def_sg_poli.webp" alt="120_elysion_ssr_b2_def_sg_poli.webp" onclick="toggleImageSelection(this)">
     </div>
     
-    <div class="photo" data-number="120" data-name="maciana" data-type="b2" data-position="sp" data-faction="elysion" data-rarity="ssr" data-weapon="sg">
-        <img src="image/120_elysion_ssr_b2_sp_sg_maciana.webp" alt="120_elysion_ssr_b2_sp_sg_maciana.webp" onclick="toggleImageSelection(this)">
+    <div class="photo" data-number="120" data-name="marciana" data-type="b2" data-position="sp" data-faction="elysion" data-rarity="ssr" data-weapon="sg">
+        <img src="image/120_elysion_ssr_b2_sp_sg_marciana.webp" alt="120_elysion_ssr_b2_sp_sg_marciana.webp" onclick="toggleImageSelection(this)">
     </div>
     
     <div class="photo" data-number="120" data-name="ether" data-type="b1" data-position="sp" data-faction="missilis" data-rarity="ssr" data-weapon="sg">
