--- a/index.html
+++ b/index.html
@@ -308,6 +308,10 @@
         <img src="image/36_abnormal_ssr_b2_sp_mg_rem.webp" alt="36_abnormal_ssr_b2_sp_mg_rem.webp" onclick="toggleImageSelection(this)">
     </div>
     
+    <div class="photo" data-number="36" data-name="rei" data-type="b3" data-position="atk" data-faction="abnormal" data-rarity="ssr" data-weapon="mg">
+        <img src="image/36_abnormal_ssr_b3_atk_mg_rei.webp" alt="36_abnormal_ssr_b3_atk_mg_rei.webp" onclick="toggleImageSelection(this)">
+    </div>
+    
     <div class="photo" data-number="36" data-name="emma" data-type="b1" data-position="sp" data-faction="elysion" data-rarity="ssr" data-weapon="mg">
         <img src="image/36_elysion_ssr_b1_sp_mg_emma.webp" alt="36_elysion_ssr_b1_sp_mg_emma.webp" onclick="toggleImageSelection(this)">
     </div>
