add url generate

--- a/index.html
+++ b/index.html
@@ -98,9 +98,13 @@
 <div>
     <input type="file" id="loadFileInput" accept=".json" onchange="loadSelectedImages(event)">
     <button id="loadButton" onclick="document.getElementById('loadFileInput').click();">Load Selected Images</button>
+</div>
+</div>
+
+    <button id="generateURLButton" onclick="generateShareableURL()">Generate Shareable URL</button>
     <button id="copyURLButton" onclick="copyURL()">Copy Shareable URL</button>
-</div>
-</div>
+
+    <script src="script.js"></script>
 
 <div class="gallery">
 
@@ -875,7 +879,7 @@ function setSortDirection(direction) {
 
 function toggleImageSelection(imgElement) {
     const selectedContainer = document.getElementById('selectedContainer');
-    const imgSrc = imgElement.src;
+    const imgSrc = imgElement.querySelector('img').src;
 
     // Check if the image is already selected
     if (imgElement.classList.contains('selected')) {
@@ -946,7 +950,6 @@ function toggleImageSelection(imgElement) {
         selectedItem.appendChild(selectedImg);
         selectedContainer.appendChild(selectedItem);
     }
-    generateShareableURL();
 }
 
 function generateShareableURL() {
@@ -965,6 +968,7 @@ function generateShareableURL() {
 
     // Optionally, you can provide feedback to the user
     console.log('Shareable URL:', shareableURL);
+    alert(`Shareable URL generated: ${shareableURL}`); // Feedback to user
 }
 
 function copyURL() {
