--- a/index.html
+++ b/index.html
@@ -367,6 +367,10 @@
         <img src="image/36_pilgrim_ssr_b2_def_mg_crown.webp" alt="36_pilgrim_ssr_b2_def_mg_crown.webp" onclick="toggleImageSelection(this)">
     </div>
     
+    <div class="photo" data-number="36" data-name="cinderella" data-type="b2" data-position="def" data-faction="pilgrim" data-rarity="ssr" data-weapon="rl">
+        <img src="image/36_pilgrim_ssr_B2_def_rl_cinderella.webp" alt="36_pilgrim_ssr_B2_def_rl_cinderella.webp" onclick="toggleImageSelection(this)">
+    </div>
+    
     <div class="photo" data-number="36" data-name="rosanna" data-type="b1" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="mg">
         <img src="image/36_tetra_ssr_b1_atk_mg_rosanna.webp" alt="36_tetra_ssr_b1_atk_mg_rosanna.webp" onclick="toggleImageSelection(this)">
     </div>
