add rapunzel pg

--- a/index.html
+++ b/index.html
@@ -599,6 +599,10 @@
         <img src="image/72_pilgrim_ssr_B3_atk_mg_modernia.webp" alt="72_pilgrim_ssr_B3_atk_mg_modernia.webp" onclick="toggleImageSelection(this)">
     </div>
     
+    <div class="photo" data-number="76" data-name="rapunzel pure grace" data-type="b1" data-position="snr" data-faction="pilgrim" data-rarity="ssr" data-weapon="sp">
+        <img src="image/76_pilgrim_ssr_B1_snr_sp_rapunzel pure grace.webp" alt="76_pilgrim_ssr_B1_snr_sp_rapunzel pure grace.webp" onclick="toggleImageSelection(this)">
+    </div>
+    
     <div class="photo" data-number="79" data-name="Delta" data-type="b2" data-position="def" data-faction="elysion" data-rarity="sr" data-weapon="sr">
         <img src="image/79_elysion_sr_B2_def_sr_Delta.webp" alt="79_elysion_sr_B2_def_sr_Delta.webp" onclick="toggleImageSelection(this)">
     </div>
