test search bar

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="filter-box">
             <h4>Class:</h4>
             <div class="checkbox-group">
-                <label><input type="checkbox" value="def" onchange="updateFilters()"> DEF</label>
-                <label><input type="checkbox" value="sp" onchange="updateFilters()"> SP</label>
-                <label><input type="checkbox" value="atk" onchange="updateFilters()"> ATK</label>
+                <label><input type="checkbox" value="def" onchange="updateFilters()"> Defender</label>
+                <label><input type="checkbox" value="sp" onchange="updateFilters()"> Supporter</label>
+                <label><input type="checkbox" value="atk" onchange="updateFilters()"> Attacker</label>
             </div>
         </div>
         <div class="filter-box">
@@ -86,9 +86,9 @@
     </div>
 
     <!-- Search Input -->
-    <div class="filter-buttons">
-    <h3>Search by Name:</h3>
+
     <div class="search-wrapper">
+    <div class="search-bar">
         <input type="text" id="searchInput" oninput="updateFilters()" placeholder="Type to search...">
         <button id="clearSearch" onclick="clearSearch()">Clear</button> <!-- Clear button -->
     </div>
@@ -823,8 +823,8 @@
         </div>
         
 
-        <div class="photo" data-number="80" data-name="Sakura Bloom in Summer" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="ar">
-            <img src="image/80_tetra_ssr_b3_sp_ar_Sakura Bloom in Summer.webp" alt="80_tetra_ssr_b3_sp_ar_Sakura Bloom in Summer.webp" onclick="toggleImageSelection(this)">
+        <div class="photo" data-number="80" data-name="Sakura Bloom in Summer" data-type="b3" data-position="atk" data-faction="tetra" data-rarity="ssr" data-weapon="ar">
+            <img src="image/80_tetra_ssr_b3_atk_ar_Sakura Bloom in Summer.webp" alt="80_tetra_ssr_b3_atk_ar_Sakura Bloom in Summer.webp" onclick="toggleImageSelection(this)">
         </div>
         
 
