--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="search-wrapper">
     <div class="search-bar">
         <input type="text" id="searchInput" oninput="updateFilters()" placeholder="Type to search...">
-        <button id="clearSearch" onclick="clearSearch()">Clear</button> <!-- Clear button -->
+        <button id="clearSearch" onclick="clearSelection()">Clear Selected Nikke </button> <!-- Clear-->
     </div>
 </div>
 
