--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="icon" href="image/favicon.ico" type="image/x-icon">
     <style>
         body { background-color: #000; color: #fff; font-family: Arial, sans-serif; }
-        .gallery { display: flex; flex-wrap: wrap; gap: 10px; }
-        .photo { display: none; flex-direction: column; align-items: center; }
-        .photo img { width: 50px; height: 50px; object-fit: cover; cursor: pointer; border-radius: 5px; }
-        .photo img.selected { border: 2px solid blue; }
+        .gallery { display: flex; flex-wrap: wrap; gap: 0px; }
         label { margin-right: 10px; color: #fff; }
         #selectedContainer { margin-top: 20px; }
         h3, h4 { color: #fff; }
@@ -90,7 +87,7 @@
     <div class="search-wrapper">
     <div class="search-bar">
         <input type="text" id="searchInput" oninput="updateFilters()" placeholder="Type to search...">
-        <button id="clearSearch" onclick="clearSelection()">Clear Selected Nikke </button> <!-- Clear-->
+        <button id="clearSelectionBtn">Clear Selection</button>
     </div>
 </div>
 
